#103 fixed hovering bug flickering

--- a/client/assets/sass/_tooltip.sass
+++ b/client/assets/sass/_tooltip.sass
@@ -392,11 +392,11 @@
       &:before
         -webkit-transform: rotate(180deg)
         transform: rotate(180deg)
-        top: 4px
+        top: -12px
       &:after
         -webkit-transform: rotate(180deg)
         transform: rotate(180deg)
-        top: 6px
+        top: -9px
 
     &.chevron-right
       &:before
